--- a/assets/index.css
+++ b/assets/index.css
@@ -9,6 +9,8 @@
     color: #030303;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
       Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display:flex;
+    flex-direction: column;
   }
   
   header {
@@ -28,15 +30,27 @@
   }
   
   .container {
-    max-width: 960px;
-    width: 100%;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: auto;
+
   }
   
   .movie {
     width: 100%;
+    margin: auto;
   }
-  
+
+  .comand {
+    display: flex;
+    background: rgb(58, 58, 58);
+    height: 50px;
+  }
+
+  button {
+    margin: auto;
+  }
   .ads {
     padding: 4px;
     padding-right: 8px;
